[gd_scene load_steps=7 format=3 uid="uid://qfynyayv1752"]

[ext_resource type="Script" path="res://scenes/characters/player.gd" id="1_g54cu"]
[ext_resource type="Texture2D" uid="uid://rvwmf1krdfbu" path="res://art/ours/spy.png" id="2_67cv7"]
[ext_resource type="PackedScene" uid="uid://0iaamj5v6b70" path="res://scenes/objects/grapple_hook.tscn" id="3_kr48a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t01rr"]
size = Vector2(10, 40)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hgief"]
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2a3cv"]
height = 40.0

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 9
floor_constant_speed = true
script = ExtResource("1_g54cu")
speed = 300.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(0.02, 0.02)
texture = ExtResource("2_67cv7")
region_enabled = true
region_rect = Rect2(688, 35, 663, 1988)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_t01rr")

[node name="GrappleHook" parent="." instance=ExtResource("3_kr48a")]
position = Vector2(0, -27)
scale = Vector2(0.5, 0.5)

[node name="Grabber" type="Area2D" parent="."]
position = Vector2(0, -20)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grabber"]
position = Vector2(9, 0)
shape = SubResource("CapsuleShape2D_hgief")

[node name="Hand" type="Marker2D" parent="."]
position = Vector2(0, -45)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -20)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(9, 0)
shape = SubResource("CapsuleShape2D_2a3cv")

[connection signal="hook_canceled" from="GrappleHook" to="." method="_on_grapple_hook_hook_canceled"]
[connection signal="hook_reached_point" from="GrappleHook" to="." method="_on_grapple_hook_hook_reached_point"]
